# ---------------------------------------------------------------------------- #
#        Apache 2.0 License Copyright © 2022-2023 The Aurae Authors            #
#                                                                              #
#                +--------------------------------------------+                #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
#                                                                              #
# ---------------------------------------------------------------------------- #
#                                                                              #
#   Licensed under the Apache License, Version 2.0 (the "License");            #
#   you may not use this file except in compliance with the License.           #
#   You may obtain a copy of the License at                                    #
#                                                                              #
#       http://www.apache.org/licenses/LICENSE-2.0                             #
#                                                                              #
#   Unless required by applicable law or agreed to in writing, software        #
#   distributed under the License is distributed on an "AS IS" BASIS,          #
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   #
#   See the License for the specific language governing permissions and        #
#   limitations under the License.                                             #
#                                                                              #
# ---------------------------------------------------------------------------- #

[workspace]

members = [
    "aer",
    "auraed",
    "auraescript",
    "client",
    "ebpf-shared",
    "proto",
]

exclude = [
    "ebpf"
]

[workspace.dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind"] } # default features except `oldtime`
client = { path = "./client" }
clap = { version = "4.1.1", features = ["derive"] }
fancy-regex = "0.11.0"
futures-util = "0.3.26"
heck = "0.4.0"
lazy_static = "1.4.0"
nix = "0.25" # upgrade to 0.26 blocked by libcgroups as of v0.0.4
proc-macro2 = "1.0"
proto = { path = "./proto" }
protobuf = "3.2.0"
protobuf-parse = "=3.2.0" # This crate makes no promises of stabilty, so we pin to the exact version
quote = "1.0"
serial_test = "1.0.0"
serde = "1.0.94"
serde_json = "1.0.94"
syn = { version = "1.0", features = ["full"] } # used in macros, so full doesn't affect binary size
test-helpers = { path = "./crates/test-helpers" }
test-helpers-macros = { path = "./crates/test-helpers-macros" }
thiserror = "1.0.37"
tokio = "1.22.0"
tonic = "0.8.2"
tonic-health = "0.8.0"
tracing = "0.1"
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"
validation = { path = "./crates/validation" }

#[patch.crates-io]
#remove_dir_all = "=0.8.0"
#time = "0.2.23"