# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #

[workspace]
members = ["aer", "auraed", "auraescript", "client", "ebpf-shared", "proto"]
exclude = ["ebpf"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
    "wasmbind",
] } # default features except `oldtime`
client = { path = "./client" }
clap = { version = "4.3.21", features = ["derive"] }
fancy-regex = "0.13.0"
futures-util = "0.3.28"
heck = "0.5.0"
lazy_static = "1.4.0"
nix = "0.28.0"
proc-macro2 = "1.0"
proto = { path = "./proto" }
proto-reader = { path = "./crates/proto-reader" }
protobuf = "3.2.0"
protobuf-parse = "=3.2.0" # This crate makes no promises of stabilty, so we pin to the exact version
quote = "1.0"
serial_test = "1.0.0"
serde = "1.0.183"
serde_json = "1.0.104"
syn = { version = "1.0", features = [
    "full",
] } # used in macros, so full doesn't affect binary size
test-helpers = { path = "./crates/test-helpers" }
test-helpers-macros = { path = "./crates/test-helpers-macros" }
thiserror = "1.0.44"
tokio = "1.29.1"
tonic = "0.9.2"
tonic-health = "0.9.2"
tracing = "0.1"
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"
validation = { path = "./crates/validation" }

#[patch.crates-io]
#remove_dir_all = "=0.8.0"
#time = "0.2.23"
