[package]
name = "aurae-client"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aurae-proto = { workspace = true }
macros = { package = "aurae-client-macros", path = "macros" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
toml = "0.5.9"
tonic = { workspace = true, features = ["tls"] }
tower = "0.4.13"
url = { workspace = true }
x509-certificate = "0.15.0"
