[package]
name = "aurae-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aurae-ebpf-shared = { path = "../aurae-ebpf-shared" }
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "aurae-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
