# ---------------------------------------------------------------------------- #
#        Apache 2.0 License Copyright © 2022-2023 The Aurae Authors            #
#                                                                              #
#                +--------------------------------------------+                #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
#                                                                              #
# ---------------------------------------------------------------------------- #
#                                                                              #
#   Licensed under the Apache License, Version 2.0 (the "License");            #
#   you may not use this file except in compliance with the License.           #
#   You may obtain a copy of the License at                                    #
#                                                                              #
#       http://www.apache.org/licenses/LICENSE-2.0                             #
#                                                                              #
#   Unless required by applicable law or agreed to in writing, software        #
#   distributed under the License is distributed on an "AS IS" BASIS,          #
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   #
#   See the License for the specific language governing permissions and        #
#   limitations under the License.                                             #
#                                                                              #
# ---------------------------------------------------------------------------- #

[package]
name = "auraed"
version = "0.0.0"
edition = "2021"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[[bin]]
name = "auraed"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
client = { workspace = true }
aurae-ebpf-shared = { path = "../ebpf-shared" }
aya = { version = ">=0.11", features = ["async_tokio"] }
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.2.1"
clap = { workspace = true }
chrono = { workspace = true }
clone3 = "0.2.3"
fancy-regex = { workspace = true }
futures = "0.3.28"
ipnetwork = "0.20.0"
iter_tools = "0.1.4"
libc = "0.2.147" # TODO: Nix comes with libc, can we rely on that?
lazy_static = { workspace = true }
libcgroups = { git = "https://github.com/containers/youki", rev = "f4e7e300e6be7a4ea758a436218b9db1b39c69cd", default-features = false, features = [
    "v2",
] }
libcontainer = { git = "https://github.com/containers/youki", rev = "f4e7e300e6be7a4ea758a436218b9db1b39c69cd", default-features = false, features = [
    "v2",
] }
log = "0.4.17"
netlink-packet-route = "0.13.0" # Used for netlink_packet_route::rtnl::address::nlas definition
nix = { workspace = true, features = ["sched"] }
oci-spec = "0.6.1"
once_cell = "1"
procfs = "0.14.2"
proto = { workspace = true }
rtnetlink = "0.11.0"
serde_json.workspace = true
serde.workspace = true
syslog-tracing = "0.1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-stream = { version = "0.1.14", features = ["net", "sync"] }
tonic = { workspace = true, features = ["tls"] }
tonic-health = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { workspace = true }
validation = { workspace = true, features = ["regex", "tonic"] }
validation_macros = { path = "../crates/validation/macros" }
walkdir = "2"

[dev-dependencies]
futures-util = { workspace = true }
multi_log = "0.1.2"
pretty_assertions = "1.3.0"
serial_test = { workspace = true }
simplelog = "0.12.0"
simple_test_case = "1.1.0"
test-helpers = { workspace = true }
test-helpers-macros = { workspace = true }
