# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #

[package]
name = "auraed"
version = "0.0.0"
edition = "2021"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[[bin]]
name = "auraed"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
client = { workspace = true }
aurae-ebpf-shared = { path = "../ebpf-shared" }
aya = { version = ">=0.11", features = ["async_tokio"] }
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.2.1"
clap = { workspace = true }
chrono = { workspace = true }
clone3 = "0.2.3"
fancy-regex = { workspace = true }
futures = "0.3.28"
ipnetwork = "0.20.0"
iter_tools = "0.20.0"
libc = "0.2.155" # TODO: Nix comes with libc, can we rely on that?
lazy_static = { workspace = true }
libcgroups = { git = "https://github.com/containers/youki", rev = "5b62356e377def45c36c29183c586c4302685cf8", default-features = false, features = [
    "v2",
] }
libcontainer = { git = "https://github.com/containers/youki", rev = "5b62356e377def45c36c29183c586c4302685cf8", default-features = false, features = [
    "v2",
] }
log = "0.4.17"
netlink-packet-route = "0.13.0" # Used for netlink_packet_route::rtnl::address::nlas definition
nix = { workspace = true, features = ["sched", "mount", "signal"] }
oci-spec = "0.6.4"
once_cell = "1"
procfs = "0.16.0"
proto = { workspace = true }
rtnetlink = "0.11.0"
serde_json.workspace = true
serde.workspace = true
syslog-tracing = "0.3.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-stream = { version = "0.1.14", features = ["net", "sync"] }
tonic = { workspace = true, features = ["tls"] }
tonic-health = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { workspace = true }
validation = { workspace = true, features = ["regex", "tonic"] }
validation_macros = { path = "../crates/validation/macros" }
walkdir = "2"

[dev-dependencies]
futures-util = { workspace = true }
multi_log = "0.1.2"
pretty_assertions = "1.3.0"
serial_test = { workspace = true }
simplelog = "0.12.0"
simple_test_case = "1.1.0"
test-helpers = { workspace = true }
test-helpers-macros = { workspace = true }
