# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #

[package]
name = "auraescript"
version = "0.0.0"
edition = "2024"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[[bin]]
name = "auraescript"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
client = { workspace = true }
deno_core = { version = "0.363.0" }
deno_ast = { version = "0.50.3", features = ["transpiling"] }
deno_runtime = { version = "0.229.0", features = ["snapshot"] }
deno_resolver = { version = "0.52.0", features = ["sync"] }
deno_error = "0.7.0"
macros = { package = "auraescript_macros", path = "./macros" }
proto = { workspace = true }
sys_traits = "0.1.17"
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }

[build-dependencies]
deno_runtime = { version = "0.229.0", features = ["snapshot"] }
