# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #

[package]
name = "auraescript"
version = "0.0.0"
edition = "2024"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[[bin]]
name = "auraescript"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
client = { workspace = true }
deno_ast = { version = "0.51.0", features = ["transpiling"] }
deno_core = "0.354.0"
deno_error = "0.7.0"
macros = { package = "auraescript_macros", path = "./macros" }
proto = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
