[package]
name = "auraed"
version = "0.0.0"
edition = "2021"
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[dependencies]
client = { workspace = true }
proto = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }